--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ branches:
   only:
   - master
 script:
+  - nuget.exe sources Add -Name "MDSOL" -Source https://imedidata.myget.org/F/mdsol/auth/$MDSOL_NUGET_ACCESS_TOKEN/api/v3/index.json
   - dotnet restore
   - dotnet build ./AspCoreApp.sln --configuration Release
 deploy:
