--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ script:
   - sudo rm -r -f /InstallationPackage/
   - dotnet publish AspCoreApp/AspCoreApp.csproj --configuration Release --framework netcoreapp2.0 --no-restore --output ../InstallationPackage
 after_success:
-  - mkdir /UploadPackages/
-  - tar cf /UploadPackages/mingestor.tar --use-compress-prog=pbzip2 /InstallationPackage
-  - cp /UploadPackages/mingestor.tar /UploadPackages/mingestor_`%Y%m%d_%H%M%S`.tar
+  - sudo mkdir /UploadPackages/
+  - tar cf /UploadPackages/mingestor.tar --use-compress-prog=pbzip2 ./InstallationPackage
+  - cp ./UploadPackages/mingestor.tar /UploadPackages/mingestor_`%Y%m%d_%H%M%S`.tar
   - ls
-  - ls /UploadPackages/
+  - ls ./UploadPackages/
 deploy:
   on:
     branch: master
