--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,13 @@ script:
   - dotnet build AspCoreApp.sln --configuration Release
   - sudo rm -r -f /InstallationPackage/
   - dotnet publish AspCoreApp/AspCoreApp.csproj --configuration Release --framework netcoreapp2.0 --no-restore --output ../InstallationPackage
+  - ls /InstallationPackage/
 after_success:
   - sudo mkdir /UploadPackages/
   - sudo tar cf /UploadPackages/mingestor.tar --use-compress-prog=pbzip2 ./InstallationPackage
   - cp ./UploadPackages/mingestor.tar /UploadPackages/mingestor_`%Y%m%d_%H%M%S`.tar
   - ls
+  - ls ./InstallationPackage
   - ls ./UploadPackages/
 deploy:
   on:
