--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
 after_success:
   - sudo mkdir ./UploadPackages/
   - sudo tar zcf ./UploadPackages/mingestor.tar ./InstallationPackage
-  - cp ./UploadPackages/mingestor.tar ./UploadPackages/mingestor_$(date +"%Y%m%d_%H%M%S").tar
+  - sudo cp ./UploadPackages/mingestor.tar ./UploadPackages/mingestor_$(date +"%Y%m%d_%H%M%S").tar
   - ls
   - ls ./InstallationPackage
   - ls ./UploadPackages/
