--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,25 @@
 language: csharp
 mono: none
 dotnet: 2.0.0
+branches:
+  only:
+  - master
 script:
-  - dotnet restore
-  - dotnet build ./AspCoreApp.sln
+  - dotnet restore --source https://api.nuget.org/v3/index.json --source https://imedidata.myget.org/F/mdsol/auth/$MDSOL_NUGET_ACCESS_TOKEN/api/v3/index.json
+  - dotnet build AspCoreApp.sln --configuration Release
+before_deploy:
+  - dotnet publish AspCoreApp/AspCoreApp.csproj --configuration Release --framework netcoreapp2.0 --no-restore --output ../InstallationPackage
+  - sudo mkdir ./UploadPackages/
+  - sudo tar zcf ./UploadPackages/mingestor.tar ./InstallationPackage/
+  - sudo cp ./UploadPackages/mingestor.tar ./UploadPackages/mingestor_${TRAVIS_BUILD_NUMBER}_${TRAVIS_BRANCH}_$(date +"%Y%m%d_%H%M%S").tar
+deploy:
+  on:
+    branch: master
+  provider: s3
+  access_key_id: $AWS_ACCESS_KEY_ID
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
+  bucket: $AWS_S3_BUCKET_NAME
+  region: $AWS_S3_BUCKET_REGION
+  skip_cleanup: true
+  local_dir: ./UploadPackages/
+  cache_control: "max-age=21600"
