--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,11 @@ script:
   - dotnet restore --source https://api.nuget.org/v3/index.json --source https://imedidata.myget.org/F/mdsol/auth/$MDSOL_NUGET_ACCESS_TOKEN/api/v3/index.json
   - dotnet build AspCoreApp.sln --configuration Release
 before_deploy:
+  - sudo apt-get install p7zip-full
   - dotnet publish AspCoreApp/AspCoreApp.csproj --configuration Release --framework netcoreapp2.0 --no-restore --output ../InstallationPackage
   - sudo mkdir ./UploadPackages/
-  - sudo tar zcf ./UploadPackages/mingestor.tar ./InstallationPackage/
-  - sudo cp ./UploadPackages/mingestor.tar ./UploadPackages/mingestor_${TRAVIS_BUILD_NUMBER}_${TRAVIS_BRANCH}_$(date +"%Y%m%d_%H%M%S").tar
+  - sudo 7z a -t7z -r ./UploadPackages/mingestor.zip ./InstallationPackage/ ./_DeploymentScripts/
+  - sudo cp ./UploadPackages/mingestor.zip ./UploadPackages/mingestor_${TRAVIS_BRANCH}_${TRAVIS_COMMIT:0:7}_$(date +"%Y%m%d_%H%M%S").zip
 deploy:
   on:
     branch: master
