--- a/AspCoreApp/AspCoreApp.csproj
+++ b/AspCoreApp/AspCoreApp.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AppStatus.NetCore" Version="1.0.0" />
+    <PackageReference Include="DiceBag" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
   </ItemGroup>
   <ItemGroup>
