--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
   - dotnet build AspCoreApp.sln --configuration Release
 before_deploy:
   - sudo apt-get install p7zip-full
-  - dotnet publish AspCoreApp/AspCoreApp.csproj --configuration Release --framework netcoreapp2.0 --no-restore --output ../InstallationPackage
+  - dotnet publish AspCoreApp/AspCoreApp.csproj --configuration Release --framework netcoreapp2.0 --runtime win81-x64 --no-restore --output ../InstallationPackage
   - sudo mkdir ./UploadPackages/
   - sudo 7z a -t7z -r ./UploadPackages/mingestor_latest.zip ./InstallationPackage/ ./_DeploymentScripts/
   - sudo cp ./UploadPackages/mingestor_latest.zip ./UploadPackages/mingestor_${TRAVIS_BRANCH//[///\]/_}_${TRAVIS_COMMIT:0:7}_$(date +"%Y%m%d_%H%M%S").zip
