--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ branches:
   only:
   - master
 script:
-  - dotnet restore --source https://api.nuget.org/v3/index.json --source https://imedidata.myget.org/F/mdsol/auth/$MDSOL_NUGET_ACCESS_TOKEN/api/v3/index.json
+  - dotnet restore --runtime win81-x64 --source https://api.nuget.org/v3/index.json --source https://imedidata.myget.org/F/mdsol/auth/$MDSOL_NUGET_ACCESS_TOKEN/api/v3/index.json
   - dotnet build AspCoreApp.sln --configuration Release
 before_deploy:
   - sudo apt-get install p7zip-full
