--- a/AspCoreApp/AspCoreApp.csproj
+++ b/AspCoreApp/AspCoreApp.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <Platforms>AnyCPU;x64</Platforms>
+    <RuntimeIdentifier>win81-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AppStatus.NetCore" Version="1.0.0" />
